--- a/src/GalleryApplication/Views/User/ShowFriends.cshtml
+++ b/src/GalleryApplication/Views/User/ShowFriends.cshtml
@@ -1,6 +1,7 @@
-@model List<ApplicationClasses.User>
+﻿@model List<ApplicationClasses.User>
 
 
-@foreach (var item in Model)
+@foreach (var friend in Model)
 {
+    <h1>@friend.Name</h1><a asp-controller="User" asp-action="AccountDetails" asp-route-id="@friend.Id">Show friend details </a><br/>
 }
