--- a/src/GalleryApplication/Views/Home/Index.cshtml
+++ b/src/GalleryApplication/Views/Home/Index.cshtml
@@ -24,7 +24,7 @@
 <body>
 @if (Model != null)
 {
-    <h1><a asp-controller="User" asp-action="Index" asp-route-id="@Model.Id">Account details</a>Hello @Model.Name</h1>
+    <h1><a asp-controller="User" asp-action="Index" asp-route-id="@Model.Id">Hello @Model.Name</a></h1>
     <br/>
 }
 else
