--- a/src/GalleryApplication/Views/User/AccountDetails.cshtml
+++ b/src/GalleryApplication/Views/User/AccountDetails.cshtml
@@ -8,5 +8,6 @@
 
 <div>
     <h1>Name: @Model.Name</h1>
+    <a asp-controller="User" asp-action="ShowFriends" asp-route-id="@Model.Id">Show friends</a>
     <a asp-action="Index">Back to Home</a>
 </div>
