--- a/src/GalleryApplication/Views/Home/ShowAlbum.cshtml
+++ b/src/GalleryApplication/Views/Home/ShowAlbum.cshtml
@@ -1,5 +1,5 @@
 ﻿@using ApplicationClasses
-@model ApplicationClasses.Album
+@model ApplicationClasses.Models.Album
 
 @{
     ViewData["Title"] = "Album: " + Model.AlbumName;
