--- a/src/GalleryApplication/Views/User/Index.cshtml
+++ b/src/GalleryApplication/Views/User/Index.cshtml
@@ -4,7 +4,8 @@
 
 @using System.Threading.Tasks
 @using ApplicationClasses
-@model User
+@using ApplicationClasses.Models
+@model ApplicationClasses.Models.User
 
 @{
     Layout = "_Layout";
