--- a/src/GalleryApplication/Views/Shared/_Layout.cshtml
+++ b/src/GalleryApplication/Views/Shared/_Layout.cshtml
@@ -32,6 +32,8 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
+                    <li><a asp-area="" asp-controller="MyProfile" asp-action="Index">My Profile</a></li>
+                    <li><a asp-area="" asp-controller="Subsriptions" asp-action="Index">Supscriptions</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
                 </ul>
