--- a/src/GalleryApplication/Views/Shared/_Layout.cshtml
+++ b/src/GalleryApplication/Views/Shared/_Layout.cshtml
@@ -20,6 +20,7 @@
 <body>
     <div class="navbar navbar-inverse navbar-fixed-top">
         <div class="container">
+            <img class="navbar-logo" src="/images/vrdoljak.jpg" id="logoConfig">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                     <span class="sr-only">Toggle navigation</span>
@@ -27,11 +28,10 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">GalleryApplication</a>
+                <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">Home</a>
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
                     <li><a asp-area="" asp-controller="MyProfile" asp-action="Index">My Profile</a></li>
                     <li><a asp-area="" asp-controller="Subsriptions" asp-action="Index">Supscriptions</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>
@@ -41,7 +41,7 @@
             </div>
         </div>
     </div>
-    <div class="container body-content">
+    <div class="container body-content;home-page">
         @RenderBody()
         <hr />
         <footer>
