--- a/src/GalleryApplication/wwwroot/css/site.css
+++ b/src/GalleryApplication/wwwroot/css/site.css
@@ -3,8 +3,7 @@
     padding-bottom: 20px;
     background-image: url("/images/tenk.jpg");
     background-size: cover;
-    background-color: transparent;
-        color: white;
+    color:white;
 }
 
 h1 {
@@ -65,7 +64,11 @@ textarea {
       background-image:url("/images/tenk.jpg");
   }
 
-  .greeting {
-      
+  .loginScreen {
+      border-radius: 10px;
+      background-color:  black;
+      background-color: rgba(0, 0, 0, 0.5);
+      position: center;
+      margin-top: 100px
   }
 }
