--- a/src/GalleryApplication/Views/Account/Login.cshtml
+++ b/src/GalleryApplication/Views/Account/Login.cshtml
@@ -14,6 +14,9 @@
             position: center;
             margin-top: 120px;
         }
+        .indented {
+            margin: 10px !important;
+        }
     </style>
 </head>
 
@@ -22,8 +25,8 @@
     ViewData["Title"] = "Log in";
 }
 <div class="loginScreen">
-    <h2 style="margin:10px">@ViewData["Title"].</h2>
-    <div class="row" style=" margin:10px">
+    <h2 class="indented">@ViewData["Title"].</h2>
+    <div class="row" style="margin:10px">
         <div class="col-md-8">
             <section>
                 <form asp-controller="Account" asp-action="Login" asp-route-returnurl="@ViewData["ReturnUrl"]" method="post" class="form-horizontal">
