--- a/src/GalleryApplication/Views/Shared/_Layout.cshtml
+++ b/src/GalleryApplication/Views/Shared/_Layout.cshtml
@@ -20,7 +20,7 @@
 <body>
     <div class="navbar navbar-inverse navbar-fixed-top">
         <div class="container">
-@*           <img class="navbar-logo" src="/images/vrdoljak.jpg" id="logoConfig">*@
+           <img class="navbar-logo" src="/images/vrdoljak.jpg" id="logoConfig">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                     <span class="sr-only">Toggle navigation</span>
